test/expected/explain_hv.out
explain short void x
              ^
15: error: "short void" is illegal for built-in type
